# rattle

./: .ghci  .gitignore  .hlint.yaml  .travis.yml  .weeder.yaml  CHANGES.txt  CITATION.cff  LICENSE  README.md  appveyor.yml  hie.yaml  rattle.cabal  stack.yaml  travis.hs
.github/workflows/: ci.yml
benchmark/: Benchmark.hs
benchmark/Benchmark/: Args.hs  FSATrace.hs  Intro.hs  Micro.hs  Redis.hs  Type.hs  VsMake.hs
examples/: Examples.hs
examples/Builder/: FSATrace.hs
html/: profile.html  rattle.js
html/ts/: environment.ts  profile.tsx  tsconfig.json  types.ts  util.ts
html/ts/reports/: details.tsx  parallelism.tsx  ruletable.tsx  summary.tsx
micro-benchmark/: MicroBenchmark.hs
model/: Check.hs  CheckTypes.hs  Combinations.hs  Conservative.hs  Model.hs  Original.hs  Properties.hs  Scheduler.hs  Sequential.hs  Shared.hs  Speculate.hs  Tree.hs  Types.hs
pipeline/: Pipeline.hs
src/: Paths.hs
src/Development/: Rattle.hs
src/Development/Rattle/: CmdOption.hs  Derived.hs  Hash.hs  Hazards.hs  Limit.hs  Options.hs  Profile.hs  Program.hs  Server.hs  Shared.hs  Types.hs  UI.hs
src/General/: Bilist.hs  Binary.hs  Errors.hs  EscCodes.hs  Extra.hs  FileInfo.hs  FileName.hs  Limit.hs  Paths.hs  Pool.hs  Template.hs  Thread.hs
test/: Test.hs  TestCmdOptions.hs  TestCmdOptions2.hs
test/C2/: constants.c
test/Test/: BuildScript.hs  Limit.hs  Simple.hs  Trace.hs  Type.hs
test/Test/Example/: FSATrace.hs  Stack.hs
