cabal-version:      >= 1.18
build-type:         Simple
name:               rattle
version:            0.1
license:            BSD3
x-license:          BSD-3-Clause OR Apache-2.0
license-file:       LICENSE
category:           Development
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2019
synopsis:           Forward build system, with caching and speculation
description:
    A forward build system like Fabrciate but with speculation and remote caching.
homepage:           https://github.com/ndmitchell/rattle#readme
bug-reports:        https://github.com/ndmitchell/rattle/issues
tested-with:        GHC==8.6.5, GHC==8.4.4, GHC==8.2.2
extra-doc-files:
    CHANGES.txt
    README.md
extra-source-files:
    test/C/constants.c
    test/C/constants.h
    test/C/main.c
data-files:
    html/profile.html
    html/rattle.js

source-repository head
    type:     git
    location: https://github.com/ndmitchell/rattle.git

library
    default-language: Haskell2010
    hs-source-dirs:   src
    build-depends:
        async,
        base >= 4.10 && < 5,
        bytestring,
        cryptohash-sha256,
        deepseq >= 1.1,
        directory,
        extra >= 1.6.14,
        filepath,
        hashable >= 1.1.2.3,
        shake >= 0.17.8,
        time,
        transformers >= 0.2,
        unordered-containers >= 0.2.7,
        js-dgtable,
        js-flot,
        js-jquery

    exposed-modules:
        Development.Rattle

    other-modules:
        Development.Rattle.Hash
        Development.Rattle.Limit
        Development.Rattle.Server
        Development.Rattle.Shared
        Development.Rattle.Types
        Development.Rattle.Profile
        General.Bilist
        General.Extra
        General.Paths
        General.Template
        Paths_rattle

test-suite rattle-test
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Test.hs
    ghc-options: -main-is Test.main -rtsopts -threaded

    build-depends:
        base >= 4.10 && < 5,
        directory,
        extra,
        filepattern,
        rattle,
        shake

executable rattle-demo
    default-language: Haskell2010
    hs-source-dirs: examples
    main-is: Examples.hs
    ghc-options: -main-is Examples.main -rtsopts -threaded

    build-depends:
        base >= 4.10 && < 5,
        directory,
        extra,
        filepath,
        rattle,
        shake,
        filepattern
    other-modules:
        Builder.FSATrace
