cabal-version:      >= 1.18
build-type:         Simple
name:               rattle
version:            0.1
license:            BSD3
x-license:          BSD-3-Clause OR Apache-2.0
license-file:       LICENSE
category:           Development
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2019
synopsis:           Forward build system, with caching and speculation
description:
    A forward build system like Fabrciate but with speculation and remote caching.
homepage:           https://github.com/ndmitchell/rattle#readme
bug-reports:        https://github.com/ndmitchell/rattle/issues
tested-with:        GHC==8.8.1, GHC==8.6.5, GHC==8.4.4, GHC==8.2.2
extra-doc-files:
    CHANGES.txt
    README.md
extra-source-files:
    test/C/constants.c
    test/C/constants.h
    test/C/main.c
data-files:
    html/profile.html
    html/rattle.js

source-repository head
    type:     git
    location: https://github.com/ndmitchell/rattle.git

library
    default-language: Haskell2010
    hs-source-dirs:   src
    build-depends:
        async,
        base >= 4.10 && < 5,
        bytestring,
        cryptohash-sha256,
        deepseq >= 1.1,
        directory,
        extra >= 1.6.14,
        filepath,
        filepattern,
        hashable >= 1.1.2.3,
        shake >= 0.17.8,
        terminal-size,
        template-haskell,
        time,
        transformers >= 0.2,
        unordered-containers >= 0.2.7,
        js-dgtable,
        js-flot,
        js-jquery

    exposed-modules:
        Development.Rattle

    other-modules:
        Development.Rattle.CmdOption
        Development.Rattle.Derived
        Development.Rattle.Hash
        Development.Rattle.Hazards
        Development.Rattle.Options
        Development.Rattle.Profile
        Development.Rattle.Program
        Development.Rattle.Server
        Development.Rattle.Shared
        Development.Rattle.Types
        Development.Rattle.UI
        General.Bilist
        General.Extra
        General.Limit
        General.Paths
        General.Pool
        General.EscCodes
        General.Template
        Paths_rattle

executable pipeline
    default-language: Haskell2010
    main-is: pipeline/Pipeline.hs
    ghc-options: -main-is Pipeline.main -threaded
    build-depends:
        base >= 4.10 && < 5,
        shake >= 0.17.8

test-suite rattle-test
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    hs-source-dirs: test, src
    main-is: Test.hs
    ghc-options: -main-is Test.main -rtsopts -threaded

    build-depends:
        async,
        base >= 4.10 && < 5,
        bytestring,
        Cabal >= 2.2,
        cryptohash-sha256,
        deepseq >= 1.1,
        directory,
        extra >= 1.6.14,
        filepath,
        filepattern,
        hashable >= 1.1.2.3,
        shake >= 0.17.8,
        time,
        transformers >= 0.2,
        terminal-size,
        template-haskell,
        unordered-containers >= 0.2.7,
        js-dgtable,
        js-flot,
        js-jquery

    other-modules:
        Development.Rattle
        Development.Rattle.CmdOption
        Development.Rattle.Derived
        Development.Rattle.Hash
        Development.Rattle.Hazards
        Development.Rattle.Options
        Development.Rattle.Profile
        Development.Rattle.Program
        Development.Rattle.Server
        Development.Rattle.Shared
        Development.Rattle.Types
        Development.Rattle.UI
        General.Bilist
        General.Extra
        General.Limit
        General.Paths
        General.Pool
        General.EscCodes
        General.Template
        Paths_rattle
        Test.Example.FSATrace
        Test.Example.Stack
        Test.Simple
        Test.Trace
        Test.Limit
        Test.Type
