cabal-version:      >= 1.18
build-type:         Simple
name:               rattle
version:            0.2
license:            BSD3
x-license:          BSD-3-Clause OR Apache-2.0
license-file:       LICENSE
category:           Development
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2019-2020
synopsis:           Forward build system, with caching and speculation
description:
    A forward build system like Fabrciate but with speculation and remote caching.
homepage:           https://github.com/ndmitchell/rattle#readme
bug-reports:        https://github.com/ndmitchell/rattle/issues
tested-with:        GHC==8.10.1, GHC==8.8.3, GHC==8.6.5, GHC==8.4.4, GHC==8.2.2
extra-doc-files:
    CHANGES.txt
    README.md
extra-source-files:
    test/C/constants.c
    test/C/constants.h
    test/C/main.c
data-files:
    html/profile.html
    html/rattle.js

source-repository head
    type:     git
    location: https://github.com/ndmitchell/rattle.git

library
    default-language: Haskell2010
    hs-source-dirs:   src
    build-depends:
        async,
        base >= 4.10 && < 5,
        bytestring,
        cryptohash-sha256,
        deepseq >= 1.1,
        directory,
        extra >= 1.6.14,
        filepath,
        filepattern,
        hashable >= 1.1.2.3,
        shake >= 0.19,
        terminal-size,
        template-haskell,
        time,
        transformers >= 0.2,
        unordered-containers >= 0.2.7,
        js-dgtable,
        js-flot,
        js-jquery,
        heaps,
        utf8-string >= 1.0.1.1

    if !os(windows)
        build-depends: unix >= 2.7.2.2

    exposed-modules:
        Development.Rattle

    other-modules:
        Development.Rattle.CmdOption
        Development.Rattle.Derived
        Development.Rattle.Hash
        Development.Rattle.Hazards
        Development.Rattle.Options
        Development.Rattle.Profile
        Development.Rattle.Program
        Development.Rattle.Server
        Development.Rattle.Shared
        Development.Rattle.Types
        Development.Rattle.UI
        General.Bilist
        General.Binary
        General.Extra
        General.Thread
        General.Paths
        General.Pool
        General.EscCodes
        General.Template
        Paths_rattle
        General.FileName
        General.FileInfo

executable pipeline
    default-language: Haskell2010
    main-is: pipeline/Pipeline.hs
    ghc-options: -main-is Pipeline.main -threaded
    build-depends:
        base >= 4.10 && < 5,
        shake >= 0.19

executable rattle-benchmark
    default-language: Haskell2010
    main-is: Benchmark.hs
    hs-source-dirs: benchmark
    ghc-options: -main-is Benchmark.main -threaded
    build-depends:
        base >= 4.10 && < 5,
        extra >= 1.6.14,
        rattle,
        process,
        bytestring,
        directory,
        filepath,
        cmdargs,
        shake >= 0.19
    other-modules:
        Benchmark.Args
        Benchmark.FSATrace
        Benchmark.Micro
        Benchmark.Redis
        Benchmark.Intro
        Benchmark.VsMake

executable buildScript
    default-language: Haskell2010
    hs-source-dirs: test, src
    main-is: Test/BuildScript.hs
    ghc-options: -main-is BuildScript.main -threaded -fwarn-unused-imports
    buildable: False
    build-depends:
        async,
        base >= 4.10 && < 5,
        bytestring,
        cryptohash-sha256,
        deepseq >= 1.1,
        directory,
        extra >= 1.6.14,
        filepath,
        filepattern,
        hashable >= 1.1.2.3,
        shake >= 0.19,
        time >= 1.9.1,
        transformers >= 0.2,
        terminal-size,
        template-haskell,
        unordered-containers >= 0.2.7,
        js-dgtable,
        js-flot,
        js-jquery,
        heaps,
        utf8-string >= 1.0.1.1

    if !os(windows)
        build-depends: unix >= 2.7.2.2

    other-modules:
        Development.Rattle
        Development.Rattle.CmdOption
        Development.Rattle.Derived
        Development.Rattle.Hash
        Development.Rattle.Hazards
        Development.Rattle.Options
        Development.Rattle.Profile
        Development.Rattle.Program
        Development.Rattle.Server
        Development.Rattle.Shared
        Development.Rattle.Types
        Development.Rattle.UI
        General.Bilist
        General.Binary
        General.Extra
        General.Thread
        General.Paths
        General.Pool
        General.EscCodes
        General.Template
        Paths_rattle
        General.FileName
        General.FileInfo

test-suite rattle-test
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    hs-source-dirs: test, src
    main-is: Test.hs
    ghc-options: -main-is Test.main -rtsopts -threaded

    build-depends:
        async,
        base >= 4.10 && < 5,
        bytestring,
        Cabal >= 2.2,
        cryptohash-sha256,
        deepseq >= 1.1,
        directory,
        extra >= 1.6.14,
        filepath,
        filepattern,
        hashable >= 1.1.2.3,
        shake >= 0.19,
        time,
        transformers >= 0.2,
        terminal-size,
        template-haskell,
        unordered-containers >= 0.2.7,
        js-dgtable,
        js-flot,
        js-jquery,
        heaps,
        utf8-string >= 1.0.1.1

    if !os(windows)
        build-depends: unix >= 2.7.2.2

    other-modules:
        Development.Rattle
        Development.Rattle.CmdOption
        Development.Rattle.Derived
        Development.Rattle.Hash
        Development.Rattle.Hazards
        Development.Rattle.Options
        Development.Rattle.Profile
        Development.Rattle.Program
        Development.Rattle.Server
        Development.Rattle.Shared
        Development.Rattle.Types
        Development.Rattle.UI
        General.Bilist
        General.Binary
        General.Extra
        General.Thread
        General.Paths
        General.Pool
        General.EscCodes
        General.Template
        Paths_rattle
        Test.Example.FSATrace
        Test.Example.Stack
        Test.Simple
        Test.Trace
        Test.Type
        General.FileName
        General.FileInfo
